--- a/desafios/modulo02/d010/fale-conosco.html
+++ b/desafios/modulo02/d010/fale-conosco.html
@@ -19,7 +19,7 @@
         </p>
     </header>
     <nav id="menu">
-        <a href="android.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">Notícias</a>
         <a href="#">Curiosidades</a>
         <a href="fale-conosco.html">Fale Conosco</a>
