--- a/exercícios/ex024/iframe001.html
+++ b/exercícios/ex024/iframe001.html
@@ -8,7 +8,23 @@
 </head>
 <body>
     <h1>Testando o uso de um iFrame</h1>
-    <p>Acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>para aprender a programar.</p>
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> também é muito legal</p>
+    <p>Acessando o site do
+        
+        <!-- Tamanho padrão 300x150 -->
+        <iframe src="https://www.cursoemvideo.com" frameborder="0" scrolling="no">
+            <a href="https://www.cursoemvideo.com" target="_blank" rel="noopener noreferrer">Curso em Vídeo</a>
+        </iframe>
+        
+        para aprender a programar.
+    </p>
+    <p>
+        O repositório do Guanabara 
+
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0">
+            no <a href="https://gustavoguanabara.github.io">GitHub</a>
+        </iframe>
+
+        também é bem legal.
+    </p>
 </body>
 </html>
