--- a/exercícios/ex024/iframe002.html
+++ b/exercícios/ex024/iframe002.html
@@ -19,7 +19,9 @@
     <h1>Teste com iFrame</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam consequatur aliquid rem vel quis ex tempore deleniti aliquam ducimus quidem impedit cum reprehenderit id omnis, officiis provident molestiae amet! Consequatur. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis facere optio culpa ex, nemo esse iure quos expedita nesciunt tempora laboriosam soluta accusantium commodi natus hic non, ea est dolores.
     </p>
-    <iframe src="/ex023/tabela006.html" frameborder="0" width="400" height="400"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" width="400" height="400">
+        <p class="erro">Navegador não compatível</p>
+    </iframe>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti vitae velit aut laudantium enim? Voluptatibus expedita quam esse sapiente labore natus sit, incidunt officiis iste, voluptate totam hic cupiditate dolores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque at libero eligendi. Harum voluptatem deserunt nulla magnam corporis assumenda ratione eos nesciunt, dolore sequi delectus sed doloremque vel quisquam dolores.</p>
 </body>
 </html>
