--- a/exercícios/ex024/iframe003.html
+++ b/exercícios/ex024/iframe003.html
@@ -28,7 +28,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod eius ea quo id ex dolorum distinctio iure sint quos ipsum temporibus, voluptates quibusdam quae eaque vitae cupiditate aspernatur debitis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat voluptas illum cupiditate necessitatibus saepe? Repellendus ullam id quod enim numquam similique eum excepturi. Necessitatibus minus fugit, autem minima veniam nam.</p>
 
-    <iframe name="frame" src="">
+    <iframe name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><img src='imagens/cursoemvideo.png'>">
         <p>navegador não compatível</p>
     </iframe>
 
