--- a/exercícios/ex024/iframe006.html
+++ b/exercícios/ex024/iframe006.html
@@ -9,6 +9,14 @@
 <body>
     <h1>Conteúdos dentro de iframes</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga dolorem officiis voluptatem! Fugit at consectetur, possimus exercitationem suscipit soluta similique. Perferendis mollitia eos iusto accusantium dicta. Natus consequatur facere soluta!</p>
-    <iframe src="" frameborder="0"></iframe>
+    <h2>Vídeos</h2>
+    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/265045525?h=217b87fac0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    <p><a href="https://vimeo.com/265045525">Looking For Something</a> from <a href="https://vimeo.com/cesarpelizer">C&eacute;sar Pelizer</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+    <h2>Mapas do Google</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1992.950032831094!2d-44.21707022935154!3d-2.5394691959860665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcd5e34c5d2e32642!2sC.E.%20Dr.Geraldo%20Melo!5e0!3m2!1spt-BR!2sbr!4v1662593907946!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <h2>Mapas do Waze</h2>
+    <iframe src="https://embed.waze.com/iframe?zoom=16&lat=-2.539307&lon=-44.215913&ct=livemap" width="600" height="450" allowfullscreen></iframe>
+    <h2>Google Docs</h2>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxGBnal7LwzR1ZVnLMk-8GPVh9ISd7_SD_mJGag6GQ-OQWoQcq9mi3FaQBlsVS9d8AyfBEhCw0D2UW/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 </body>
 </html>
