--- a/desafios/modulo04/facebook.html
+++ b/desafios/modulo04/facebook.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube</title>
-    <link rel="stylesheet" href="/estilo/paginas.css">
+    <title>Facebook</title>
+    <link rel="stylesheet" href="estilo/paginas.css">
     <style>
         a {
-            background-color: darkred;
+            background-color: darkblue;
         }
         a:hover {
-            background-color: red;
+            background-color: blue;
         }
     </style>
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank">ACESSE</a>
+    <img src="imagens/tela-facebook.jpg" alt="">
+    <a href="#" target="_blank">ACESSE</a>
 </body>
 </html>
