--- a/desafios/modulo04/index.html
+++ b/desafios/modulo04/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -15,12 +15,12 @@
             <iframe id="tela" name="tela" src="home.html" frameborder="0"></iframe>
         </section>
         <section id="redes-sociais">
-            <img class="icone" src="imagens/logo-home.jpg" alt="">
+            <a href="home.html" target="tela"><img class="icone" src="imagens/logo-home.jpg" alt=""></a>
             <a href="youtube.html" target="tela"><img class="icone" src="imagens/logo-youtube.jpg" alt=""></a>
-            <img class="icone" src="imagens/logo-github.jpg" alt="">
-            <img class="icone" src="imagens/logo-instagram.jpg" alt="">
-            <img class="icone" src="imagens/logo-twitter.jpg" alt="">
-            <img class="icone" src="imagens/logo-facebook.jpg" alt="">
+            <a href="github.html" target="tela"><img class="icone" src="imagens/logo-github.jpg" alt=""></a>
+            <a href="instagram.html" target="tela"><img class="icone" src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="twitter.html" target="tela"><img class="icone" src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="facebook.html" target="tela"><img class="icone" src="imagens/logo-facebook.jpg" alt=""></a>
         </section>
     </main>
 </body>
