--- a/exercícios/ex025/form003.html
+++ b/exercícios/ex025/form003.html
@@ -26,6 +26,14 @@
             <input type="month" name="mes" id="imes" value="2022-09">
         </div>
         <div>
+            <label for="idia">Dia da Prova: </label>
+            <input type="date" name="dia" id="idia" value="2022-09-19">
+        </div>
+        <div>
+            <label for="ihora">Horário:</label>
+            <input type="time" name="hora" id="ihora">
+        </div>
+        <div>
             <input type="submit" value="Enviar">
             <input type="reset" value="Limpar">
         </div>
