--- a/exercícios/ex026/mq005/index.html
+++ b/exercícios/ex026/mq005/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="estilos\style.css">
     <script src="scripts\script.js"></script>
 </head>
+
 <body>
     <header id="cabecalho">
         <h1>Meu Site</h1>
         <nav id="menu">
-            <img id="icon-menu" src="imagens/menu-icon.svg" alt="">
             <ul id="lista">
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -23,6 +23,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <article>
+            <h2>Testando Media Queries</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nisi esse doloribus quibusdam commodi consectetur ut iste repudiandae neque perferendis tenetur, alias labore, rerum officiis quam fuga enim veniam totam magni! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit nam minus voluptatem quaerat provident quo illum, ducimus, beatae incidunt, quos natus in autem enim culpa. Cum minus ex delectus aliquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum nisi molestiae unde nobis ipsa est! Ut ipsa natus officiis id sint pariatur? Consequuntur at quo, mollitia dolorum beatae aspernatur minus?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus nulla provident ab suscipit velit modi recusandae illum eius. Dolor ad deleniti vitae similique iure ratione a recusandae nesciunt provident sunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt eum veritatis ipsa aliquam perspiciatis modi, vel eveniet iure quibusdam recusandae, excepturi, ratione praesentium quia sit repudiandae molestiae accusantium quaerat necessitatibus. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut quasi quos molestiae cumque fuga itaque facere est rerum reiciendis nam at sit minima saepe sunt earum, sapiente quis, a magni.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic ea iure omnis dolor illo consectetur, ipsam culpa. Doloremque totam perferendis et, neque ex sint cum commodi iure libero. Expedita, officiis?</p>
+        </article>
+    </main>
 </body>
 
 </html>
