--- a/exercícios/ex026/mq005/index.html
+++ b/exercícios/ex026/mq005/index.html
@@ -8,11 +8,13 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos\style.css">
     <script src="scripts\script.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
 <body>
     <header id="cabecalho">
         <h1>Meu Site</h1>
+        <span id="icone" class="material-symbols-outlined" onclick="abrirMenu()">menu</span>
         <nav id="menu">
             <ul id="lista">
                 <li><a href="#">Opção 1</a></li>
