--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -8,19 +8,28 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos\style.css">
     <link rel="stylesheet" href="estilos\media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-    <main>
-        <div id="imagem"></div>
-        <div id="campos">
+    <main id="cartao">
+        <div id="imagem">
+            
+        </div>
+        <div id="login">
             <h1>Login</h1>
             <p>Seja bem-vindo(a) novamente. Faça login para acessar as configurações no seu ambiente.</p>
-            <form>
-                <input type="email" name="email" id="iemail" placeholder="seu e-mail" required>
-                <input type="password" name="senha" id="isenha" placeholder="sua senha">
-                <input type="submit" value="Entrar">
-                <input type="button" value="Esqueci a senha">
+            <form id="formulario" autocomplete="on">
+                <div class="campo">
+                    <span class="material-symbols-outlined">person</span>
+                    <input class="entrada" type="email" name="email" id="iemail" placeholder="seu e-mail" required autocomplete="email">
+                </div>
+                <div class="campo">
+                    <span class="material-symbols-outlined">key</span>
+                    <input class="entrada" type="password" name="senha" id="isenha" placeholder="sua senha">
+                </div>
+                <input class="botoes" type="submit" value="Entrar">
+                <a id="esqueci-senha" href="#" class="botoes">Esqueci a senha <span id="icone-mensagem" class="material-symbols-outlined">mail</span></a>
             </form>
         </div>
     </main>
