--- a/desafios/d015/index.html
+++ b/desafios/d015/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="campo">
                     <span class="material-symbols-outlined">key</span>
-                    <input class="entrada" type="password" name="senha" id="isenha" placeholder="sua senha" minlength="4" maxlength="8">
+                    <input class="entrada" type="password" name="senha" id="isenha" placeholder="sua senha" minlength="4" maxlength="8" autocomplete="current-password" required>
                 </div>
                 <input class="botoes" type="submit" value="Entrar">
                 <a id="esqueci-senha" href="#" class="botoes">Esqueci a senha <span id="icone-mensagem" class="material-symbols-outlined">mail</span></a>
